animaciones en inicio y hace tu pedido

--- a/paginas/hacetupedido.html
+++ b/paginas/hacetupedido.html
@@ -43,6 +43,7 @@
             <div class="gridcontainerhtp">
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Bombones.jpg" alt="Bombones">
+                    <div class="textimg">Bombones</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -50,6 +51,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Cakepops.jpg" alt="Cakepops">
+                    <div class="textimg">Cakepops</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -57,6 +59,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Icepops.jpg" alt="Icepops">
+                    <div class="textimg">Icepops</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -64,6 +67,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Chocotorta.jpg" alt="Chocotorta">
+                    <div class="textimg">Chocotorta</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -71,6 +75,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Cookies.jpg" alt="Cookies">
+                    <div class="textimg">Cookies</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -78,6 +83,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Pepas.jpg" alt="Pepas">
+                    <div class="textimg">Pepas</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -85,6 +91,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Shots.jpg" alt="Shots">
+                    <div class="textimg">Shots</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -92,6 +99,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Cupcakes.jpg" alt="Cupcakes">
+                    <div class="textimg">Cupcakes</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -99,6 +107,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Galletitas.jpg" alt="Galletitas Personalizadas">
+                    <div class="textimg">Galletitas Personalizadas</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -106,6 +115,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Maicena.jpg" alt="Alfajores de Maicena">
+                    <div class="textimg">Alfajores de Maicena</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -113,6 +123,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Achocolate.jpg" alt="Alfajor de Chocolate">
+                    <div class="textimg">Alfajor de Chocolate</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -120,6 +131,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Marquesse.jpg" alt="Torta Marquesse">
+                    <div class="textimg">Torta Marquesse</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -127,6 +139,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Tartadurazno.jpg" alt="Tarta de Durazno">
+                    <div class="textimg">Tarta de Durazno</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -134,6 +147,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/Tartamanzana.jpg" alt="Tarta de Manzana">
+                    <div class="textimg">Tarta de Manzana</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
@@ -141,6 +155,7 @@
                 </div>
                 <div class="producto">
                     <img class="Fotoproducto" src="../imagenes/Productos/TortasP.jpg" alt="Tortas Personalizadas">
+                    <div class="textimg">Tortas Personalizadas</div>
                     <div class="carrito">
                         <input class="checkbox" type="checkbox" value="1"> 
                         <p>Agregar al carrito</p>
