--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <img src="imagenes/Torta4.jpeg">
             </div>
             <div class="parrafo">
-                <p>Probando git desde trabajoLorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam a ex non eveniet officia, 
+                <p>Nueva rama prueba trabajo rama prueba trabajo Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam a ex non eveniet officia, 
                 laudantium, fugiat perspiciatis qui sint repellat vitae sed impedit repudiandae ipsum esse 
                 animi blanditiis ratione doloremque!</p>
             </div>
