--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <img src="imagenes/Torta4.jpeg">
         </div>
         <div class="parrafo">
-            <p>Probando git desde casaLorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam a ex non eveniet
-                officia,
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam a ex non eveniet
+                officia
                 laudantium, fugiat perspiciatis qui sint repellat vitae sed impedit repudiandae ipsum esse
-                animi blanditiis ratione doloremque!</p>
+                animi blanditiis ration</p>
         </div>
     </main>
     <footer>
