--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/stylesrem.css" />
 </head>
-
 <body>
     <header class="header" id="arriba">
         <div class="logo">
             <img src="Icons/icon.jpeg" alt="Pies&Cakes">
         </div>
-        <div class="title1" id="text1">
-            <h1>Pies & Cakes</h1>
+        <div class="title1">
+            <p>Pies & Cakes</p>
         </div>
-        <div class="title1" id="text2">
-            <h3>Hecho con Amor</h3>
+        <div class="title2">
+            <p>Hecho con Amor</p>
         </div>
     </header>
     <nav>
@@ -78,6 +77,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP -->
 </body>
 
 </html>
