--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../Icons/favicon.ico" type="image/x-icon">
-        <title>Pies & Cakes | Nosotros </title>
-        <link rel="stylesheet" href="../styles/styles.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header class="header" id="arriba">
-            <div class="logo">
-                <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
-            </div>
-            <div class="title1" id="text1">
-                <h1>Pies & Cakes</h1>
-            </div>
-            <div class="title1" id="text2">
-                <h3>Hecho con Amor</h3>
-            </div>
-        </header>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <title>Pies & Cakes | Nosotros</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP -->
+    <link rel="stylesheet" href="../styles/stylesrem.css" />
+</head>
+<body>
+    <header class="header" id="arriba">
+        <div class="logo">
+            <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
+        </div>
+        <div class="title1">
+            <p>Pies & Cakes</p>
+        </div>
+        <div class="title2">
+            <p>Hecho con Amor</p>
+        </div>
+    </header>
         <nav>
             <ul class="navbar">
                 <li><a href="../index.html">Inicio</a> </li>
