--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -1,120 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="../Icons/favicon.ico" type="image/x-icon">
-        <title>Pies & Cakes | Productos </title>
-        <link rel="stylesheet" href="../styles/styles.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300;500&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <header class="header" id="arriba">
-            <div class="logo">
-                <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <title>Pies & Cakes | Productos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP -->
+    <link rel="stylesheet" href="../styles/stylesrem.css" />
+</head>
+<body>
+    <header class="header" id="arriba">
+        <div class="logo">
+            <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
+        </div>
+        <div class="title1">
+            <p>Pies & Cakes</p>
+        </div>
+        <div class="title2">
+            <p>Hecho con Amor</p>
+        </div>
+    </header>
+    <nav>
+        <ul class="navbar">
+            <li><a href="../index.html">Inicio</a> </li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="nosotros.html">Nosotros</a> </li>
+            <li><a href="hacetupedido.html">Hace tu pedido</a> </li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+    </nav>
+    <main class="main">
+        <p class="productosp">Nuestros productos</p>
+        <div class="gridcontainerproductos">
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Bombones.jpg" alt="Bombones">
+                <div class="textimg">Bombones</div>
             </div>
-            <div class="title1" id="text1">
-                <h1>Pies & Cakes</h1>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Cakepops.jpg" alt="Cakepops">
+                <div class="textimg">Cakepops</div>
             </div>
-            <div class="title1" id="text2">
-                <h3>Hecho con Amor</h3>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Icepops.jpg" alt="Icepops">
+                <div class="textimg">Icepops</div>
             </div>
-        </header>
-        <nav>
-            <ul class="navbar">
-                <li><a href="../index.html">Inicio</a> </li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="nosotros.html">Nosotros</a> </li>
-                <li><a href="hacetupedido.html">Hace tu pedido</a> </li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <main class="main">
-                <p class="productosp">Nuestros productos</p>
-                <div class="gridcontainerproductos">
-                    <div class="contenedor">
-                        <img class="Fotoproducto" src="../imagenes/Productos/Bombones.jpg" alt="Bombones">
-                        <div class="textimg">Bombones</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Cakepops.jpg" alt="Cakepops">
-                        <div class="textimg">Cakepops</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Icepops.jpg" alt="Icepops">
-                        <div class="textimg">Icepops</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Chocotorta.jpg" alt="Chocotorta">
-                        <div class="textimg">Chocotorta</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Cookies.jpg" alt="Cookies">
-                        <div class="textimg">Cookies</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Pepas.jpg" alt="Pepas">
-                        <div class="textimg">Pepas</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Shots.jpg" alt="Shots">
-                        <div class="textimg">Shots</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Cupcakes.jpg" alt="Cupcakes">
-                        <div class="textimg">Cupcakes</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Galletitas.jpg" alt="Galletitas Personalizadas">
-                        <div class="textimg">Galletitas Personalizadas</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Maicena.jpg" alt="Alfajores de Maicena">
-                        <div class="textimg">Alfajores de Maicena</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Achocolate.jpg" alt="Alfajor de Chocolate">
-                        <div class="textimg">Alfajor de Chocolate</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Marquesse.jpg" alt="Torta Marquesse">
-                        <div class="textimg">Torta Marquesse</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Tartadurazno.jpg" alt="Tarta de Durazno">
-                        <div class="textimg">Tarta de Durazno</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/Tartamanzana.jpg" alt="Tarta de Manzana">
-                        <div class="textimg">Tarta de Manzana</div>
-                    </div>
-                    <div class="contenedor">                    
-                        <img class="Fotoproducto" src="../imagenes/Productos/TortasP.jpg" alt="Tortas Personalizadas">
-                        <div class="textimg">Tortas Personalizadas</div>
-                    </div>
-                </div>
-        </main>
-        <footer>
-            <div class="copyright">
-                <p>Pagina creada por Lucas Cepeda</p>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Chocotorta.jpg" alt="Chocotorta">
+                <div class="textimg">Chocotorta</div>
             </div>
-            <div class="arriba">
-                <a href="#arriba">Volver Arriba</a>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Cookies.jpg" alt="Cookies">
+                <div class="textimg">Cookies</div>
             </div>
-            <div class="links">
-                <a href="mailto:piescakes@gmail.com"><img src="../Icons/gmail.png" alt="Email"></a>
-                <a href="https://www.instagram.com/sandrapiescakes/"><img src="../Icons/instagram.png" alt="Instagram"></a>
-                <a href="https://wa.me/+5491122531045"><img src="../Icons/whatsapp.png" alt="Whatsapp"></a>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Pepas.jpg" alt="Pepas">
+                <div class="textimg">Pepas</div>
             </div>
-        </footer>
-    </body>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Shots.jpg" alt="Shots">
+                <div class="textimg">Shots</div>
+            </div>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Cupcakes.jpg" alt="Cupcakes">
+                <div class="textimg">Cupcakes</div>
+            </div>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Galletitas.jpg" alt="Galletitas Personalizadas">
+                <div class="textimg">Galletitas Personalizadas</div>
+            </div>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Maicena.jpg" alt="Alfajores de Maicena">
+                <div class="textimg">Alfajores de Maicena</div>
+            </div>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Achocolate.jpg" alt="Alfajor de Chocolate">
+                <div class="textimg">Alfajor de Chocolate</div>
+            </div>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Marquesse.jpg" alt="Torta Marquesse">
+                <div class="textimg">Torta Marquesse</div>
+            </div>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Tartadurazno.jpg" alt="Tarta de Durazno">
+                <div class="textimg">Tarta de Durazno</div>
+            </div>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/Tartamanzana.jpg" alt="Tarta de Manzana">
+                <div class="textimg">Tarta de Manzana</div>
+            </div>
+            <div class="contenedor">
+                <img class="Fotoproducto" src="../imagenes/Productos/TortasP.jpg" alt="Tortas Personalizadas">
+                <div class="textimg">Tortas Personalizadas</div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <div class="copyright">
+            <p>Pagina creada por Lucas Cepeda</p>
+        </div>
+        <div class="arriba">
+            <a href="#arriba">Volver Arriba</a>
+        </div>
+        <div class="links">
+            <a href="mailto:piescakes@gmail.com"><img src="../Icons/gmail.png" alt="Email"></a>
+            <a href="https://www.instagram.com/sandrapiescakes/"><img src="../Icons/instagram.png" alt="Instagram"></a>
+            <a href="https://wa.me/+5491122531045"><img src="../Icons/whatsapp.png" alt="Whatsapp"></a>
+        </div>
+    </footer>
+    <!-- BOOTSTRAP -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+    <!-- BOOTSTRAP -->
+</body>
+
 </html>
