--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -22,51 +22,69 @@
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="../styles/stylesrem.css" />
 </head>
-<body>
-    <header class="header" id="arriba">
-        <div class="logo">
-            <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
+    <body>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <header class="header" id="arriba">
+                        <div class="logo">
+                            <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
+                        </div>
+                        <div class="title1">
+                            <p>Pies & Cakes</p>
+                        </div>
+                        <div class="title2">
+                            <p>Hecho con Amor</p>
+                        </div>
+                    </header>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <nav>
+                        <ul class="navbar">
+                            <li><a href="../index.html">Inicio</a> </li>
+                            <li><a href="productos.html">Productos</a></li>
+                            <li><a href="nosotros.html">Nosotros</a> </li>
+                            <li><a href="hacetupedido.html">Hace tu pedido</a> </li>
+                            <li><a href="contacto.html">Contacto</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <main class="mainnosotros">
+                        <img class="sandrayaylen" src="../imagenes/Nosotros.jpeg" alt="Sandra y Aylen">
+                        <div class="textycorazon">
+                            <p class="pnosotros">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. Dignissimos atque odit expedita vel officia? Quidem molestiae
+                                enim recusandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. Dignissimos atque odit expedita vel officia? Quidem molestiae enim recusandae.
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. 
+                                Dignissimos atque odit expedita vel officia? Quidem molestiae enim recusandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas 
+                                assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. Dignissimos atque odit expedita vel officia? Quidem molestiae enim recusandae.
+                            </p>
+                            <img class="corazon" src="../imagenes/corazon.png" alt="corazon" srcset="">
+                        </div>
+                    </main>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <footer>
+                        <div class="copyright">
+                            <p>Pagina creada por Lucas Cepeda</p>
+                        </div>
+                        <div class="arriba">
+                            <a href="#arriba">Volver Arriba</a>
+                        </div>
+                        <div class="links">
+                            <a href="mailto:piescakes@gmail.com"><img src="../Icons/gmail.png" alt="Email"></a>
+                            <a href="https://www.instagram.com/sandrapiescakes/"><img src="../Icons/instagram.png" alt="Instagram"></a>
+                            <a href="https://wa.me/+5491122531045"><img src="../Icons/whatsapp.png" alt="Whatsapp"></a>
+                        </div>
+                    </footer>
+                </div>
+            </div>    
         </div>
-        <div class="title1">
-            <p>Pies & Cakes</p>
-        </div>
-        <div class="title2">
-            <p>Hecho con Amor</p>
-        </div>
-    </header>
-        <nav>
-            <ul class="navbar">
-                <li><a href="../index.html">Inicio</a> </li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="nosotros.html">Nosotros</a> </li>
-                <li><a href="hacetupedido.html">Hace tu pedido</a> </li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-        <main class="mainnosotros">
-            <img class="sandrayaylen" src="../imagenes/Nosotros.jpeg" alt="Sandra y Aylen">
-            <div class="textycorazon">
-                <p class="pnosotros">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. Dignissimos atque odit expedita vel officia? Quidem molestiae
-                    enim recusandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. Dignissimos atque odit expedita vel officia? Quidem molestiae enim recusandae.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. 
-                    Dignissimos atque odit expedita vel officia? Quidem molestiae enim recusandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas 
-                    assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. Dignissimos atque odit expedita vel officia? Quidem molestiae enim recusandae.
-                </p>
-                <img class="corazon" src="../imagenes/corazon.png" alt="corazon" srcset="">
-            </div>
-        </main>
-        <footer>
-            <div class="copyright">
-                <p>Pagina creada por Lucas Cepeda</p>
-            </div>
-            <div class="arriba">
-                <a href="#arriba">Volver Arriba</a>
-            </div>
-            <div class="links">
-                <a href="mailto:piescakes@gmail.com"><img src="../Icons/gmail.png" alt="Email"></a>
-                <a href="https://www.instagram.com/sandrapiescakes/"><img src="../Icons/instagram.png" alt="Instagram"></a>
-                <a href="https://wa.me/+5491122531045"><img src="../Icons/whatsapp.png" alt="Whatsapp"></a>
-            </div>
-        </footer>
     </body>
 </html>
