Estilo y funcionamiento en botones, final de bootstrap

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -71,19 +71,19 @@
                                 <input type="text" name="localidad" placeholder="  Localidad">
                                 <input type="email" name="email" placeholder="  E-mail">
                                 <input type="tel" name="telefono" placeholder="  Telefono">
+                                </div>
+                                <div class="col-md-4 col-sm-6 col-xs-12">
+                                    <div class="comentarios">
+                                        <div class="texta">
+                                            <textarea>Contanos lo que estas buscando</textarea>
+                                        </div>
+                                        <div class="botones" >
+                                            <button class="boton__element" id="limpiar" type="reset">Limpiar formulario</button>
+                                            <button class="boton__element" type="submit">Enviar</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </form>
-                        </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <div class="comentarios">
-                                <div class="texta">
-                                    <textarea>Contanos lo que estas buscando</textarea>
-                                </div>
-                                <div class="botones">
-                                    <button id="limpiar" type="reset">Limpiar formulario</button>
-                                    <button type="submit">Enviar</button>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </main>
             </div>
