--- a/paginas/hacetupedido.html
+++ b/paginas/hacetupedido.html
@@ -456,7 +456,7 @@
                 </div> -->
             </div>
             <div  class="confpedido">
-                <button type="submit">Confirmar Pedido</button>
+                <button class="boton__element" type="submit">Confirmar Pedido</button>
             </div>
         </main>
         <footer>
