--- a/index.html
+++ b/index.html
@@ -54,35 +54,39 @@
             </div>
         </div>
         <div class="row">
-            <main>
-                <div class="imgs">
-                    <img src="imagenes/Torta1.jpeg">
-                    <img src="imagenes/Torta2.jpeg">
-                    <img src="imagenes/Torta3.jpeg">
-                    <img src="imagenes/Torta4.jpeg">
-                </div>
-                <div class="parrafo">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam a ex non eveniet
-                        officia,
-                        laudantium, fugiat perspiciatis qui sint repellat vitae sed impedit repudiandae ipsum esse
-                        animi blanditiis ratione doloremque!</p>
-                </div>
-            </main>
+            <div class="col-12">
+                <main>
+                    <div class="imgs">
+                        <img src="imagenes/Torta1.jpeg">
+                        <img src="imagenes/Torta2.jpeg">
+                        <img src="imagenes/Torta3.jpeg">
+                        <img src="imagenes/Torta4.jpeg">
+                    </div>
+                    <div class="parrafo">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam a ex non eveniet
+                            officia,
+                            laudantium, fugiat perspiciatis qui sint repellat vitae sed impedit repudiandae ipsum esse
+                            animi blanditiis ratione doloremque!</p>
+                    </div>
+                </main>
+            </div>
         </div>
         <div class="row">
-            <footer>
-                <div class="copyright">
-                    <p>Pagina creada por Lucas Cepeda</p>
-                </div>
-                <div class="arriba">
-                    <a href="#arriba">Volver Arriba</a>
-                </div>
-                <div class="links">
-                    <a href="mailto:piescakes@gmail.com"><img src="Icons/gmail.png" alt="Email"></a>
-                    <a href="https://www.instagram.com/sandrapiescakes/"><img src="Icons/instagram.png" alt="Instagram"></a>
-                    <a href="https://wa.me/+5491122531045"><img src="Icons/whatsapp.png" alt="Whatsapp"></a>
-                </div>
-            </footer>
+            <div class="col-12">
+                <footer>
+                    <div class="copyright">
+                        <p>Pagina creada por Lucas Cepeda</p>
+                    </div>
+                    <div class="arriba">
+                        <a href="#arriba">Volver Arriba</a>
+                    </div>
+                    <div class="links">
+                        <a href="mailto:piescakes@gmail.com"><img src="Icons/gmail.png" alt="Email"></a>
+                        <a href="https://www.instagram.com/sandrapiescakes/"><img src="Icons/instagram.png" alt="Instagram"></a>
+                        <a href="https://wa.me/+5491122531045"><img src="Icons/whatsapp.png" alt="Whatsapp"></a>
+                    </div>
+                </footer>
+            </div>
         </div>
         <!-- BOOTSTRAP -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
