--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -22,72 +22,78 @@
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="../styles/stylesrem.css" />
 </head>
-    <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <header class="header" id="arriba">
-                        <div class="logo">
-                            <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
-                        </div>
-                        <div class="title1">
-                            <p>Pies & Cakes</p>
-                        </div>
-                        <div class="title2">
-                            <p>Hecho con Amor</p>
-                        </div>
-                    </header>
-                </div>
+
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <header class="header" id="arriba">
+                    <div class="logo">
+                        <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
+                    </div>
+                    <div class="title1">
+                        <p>Pies & Cakes</p>
+                    </div>
+                    <div class="title2">
+                        <p>Hecho con Amor</p>
+                    </div>
+                </header>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <nav>
-                        <ul class="navbar">
-                            <li><a href="../index.html">Inicio</a> </li>
-                            <li><a href="productos.html">Productos</a></li>
-                            <li><a href="nosotros.html">Nosotros</a> </li>
-                            <li><a href="hacetupedido.html">Hace tu pedido</a> </li>
-                            <li><a href="contacto.html">Contacto</a></li>
-                        </ul>
-                    </nav>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <nav>
+                    <ul class="navbar">
+                        <li><a href="../index.html">Inicio</a> </li>
+                        <li><a href="productos.html">Productos</a></li>
+                        <li><a href="nosotros.html">Nosotros</a> </li>
+                        <li><a href="hacetupedido.html">Hace tu pedido</a> </li>
+                        <li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="row">
-                <main>
-                    <div class="col-12">
-                        <div class="pespeciales">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dicta, exercitationem maxime temporibus debitis adipisci facilis eos.</p>
+        </div>
+        <div class="row">
+            <main>
+                <div class="col-12">
+                    <div class="pespeciales">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dicta, exercitationem maxime
+                            temporibus debitis adipisci facilis eos.</p>
+                    </div>
+                </div>
+                <div class="bodycontacto">
+                    <div class="col-md-4 col-xs-12">
+                        <div class="mapa">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.986594961383!2d-58.24253448472231!3d-34.730732271736684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32e515586e139%3A0xffb77f22d75d1e4c!2sBelgrano%201322%2C%20Quilmes%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1645743988086!5m2!1ses!2sar"
+                                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                                alt="Quilmes, Buenos Aires"></iframe>
                         </div>
                     </div>
-                    <div class="bodycontacto">
-                        <div class="col-md-4 col-xs-12">
-                            <div class="mapa">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.986594961383!2d-58.24253448472231!3d-34.730732271736684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32e515586e139%3A0xffb77f22d75d1e4c!2sBelgrano%201322%2C%20Quilmes%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1645743988086!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" alt="Quilmes, Buenos Aires"></iframe>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <form class="form" method="post">
+                            <input type="text" name="nombre" placeholder="  Nombre">
+                            <input type="text" name="localidad" placeholder="  Localidad">
+                            <input type="email" name="email" placeholder="  E-mail">
+                            <input type="tel" name="telefono" placeholder="  Telefono">
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="comentarios">
+                            <div class="texta">
+                                <textarea>Contanos lo que estas buscando</textarea>
+                            </div>
+                            <div class="botones">
+                                <button class="boton__element" id="limpiar" type="reset">Limpiar formulario</button>
+                                <button class="boton__element" type="submit">Enviar</button>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-12">
-                            <form class="form" method="post">
-                                <input type="text" name="nombre" placeholder="  Nombre">
-                                <input type="text" name="localidad" placeholder="  Localidad">
-                                <input type="email" name="email" placeholder="  E-mail">
-                                <input type="tel" name="telefono" placeholder="  Telefono">
-                                </div>
-                                <div class="col-md-4 col-sm-6 col-xs-12">
-                                    <div class="comentarios">
-                                        <div class="texta">
-                                            <textarea>Contanos lo que estas buscando</textarea>
-                                        </div>
-                                        <div class="botones" >
-                                            <button class="boton__element" id="limpiar" type="reset">Limpiar formulario</button>
-                                            <button class="boton__element" type="submit">Enviar</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
                     </div>
-                </main>
-            </div>
-            <div class="row">
+                    </form>
+                </div>
+            </main>
+        </div>
+        <div class="row">
+            <div class="col-12">
                 <footer>
                     <div class="copyright">
                         <p>Pagina creada por Lucas Cepeda</p>
@@ -97,11 +103,14 @@
                     </div>
                     <div class="links">
                         <a href="mailto:piescakes@gmail.com"><img src="../Icons/gmail.png" alt="Email"></a>
-                        <a href="https://www.instagram.com/sandrapiescakes/"><img src="../Icons/instagram.png" alt="Instagram"></a>
+                        <a href="https://www.instagram.com/sandrapiescakes/"><img src="../Icons/instagram.png"
+                                alt="Instagram"></a>
                         <a href="https://wa.me/+5491122531045"><img src="../Icons/whatsapp.png" alt="Whatsapp"></a>
                     </div>
                 </footer>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
