--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -26,17 +26,19 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <header class="header" id="arriba">
-                <div class="logo">
-                    <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
-                </div>
-                <div class="title1">
-                    <p>Pies & Cakes</p>
-                </div>
-                <div class="title2">
-                    <p>Hecho con Amor</p>
-                </div>
-            </header>
+            <div class="col-12">
+                <header class="header" id="arriba">
+                    <div class="logo">
+                        <img src="../Icons/icon.jpeg" alt="Pies&Cakes">
+                    </div>
+                    <div class="title1">
+                        <p>Pies & Cakes</p>
+                    </div>
+                    <div class="title2">
+                        <p>Hecho con Amor</p>
+                    </div>
+                </header>
+            </div>
         </div>
         <div class="row">
             <div class="col-12">
