--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -64,10 +64,7 @@
                 <div class="bodycontacto">
                     <div class="col-md-4 col-xs-12">
                         <div class="mapa">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3278.986594961383!2d-58.24253448472231!3d-34.730732271736684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32e515586e139%3A0xffb77f22d75d1e4c!2sBelgrano%201322%2C%20Quilmes%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1645743988086!5m2!1ses!2sar"
-                                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                                alt="Quilmes, Buenos Aires"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d819.7466157636796!2d-58.24089297079476!3d-34.73073559660497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a32e515586e139%3A0xffb77f22d75d1e4c!2sBelgrano%201322%2C%20Quilmes%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1649159965057!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 col-xs-12">
