--- a/paginas/hacetupedido.html
+++ b/paginas/hacetupedido.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../Icons/favicon.ico" type="image/x-icon">
     <title>Pies & Cakes | Hace tu Pedido</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -133,8 +133,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Icepops</h5>
                                         <p class="card-text">This is a wider card with supporting text below as a
-                                            natural
-                                            lead-in to
+                                            natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <p class="card-text"><small class="text-muted">Precio: $500</small></p>
                                         <div class="carrito">
