--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="tortas, torta, tartas, cupcakes, icepops, galletitas, quilmes, berazategui, cumpleaños, casamiento, eventos">
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <title>Pies & Cakes | Inicio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
