Mixin, maps, map-get y extend agregado

--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -20,7 +20,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="../styles/estilos.css" />
+    <link rel="stylesheet" href="../styles/stylenosotros.css"/>
 </head>
     <body>
         <div class="container-fluid">
@@ -63,9 +63,19 @@
                                 Dignissimos atque odit expedita vel officia? Quidem molestiae enim recusandae.Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas 
                                 assumenda impedit at deserunt sequi, veniam dicta fugiat minima voluptatum nihil. Dignissimos atque odit expedita vel officia? Quidem molestiae enim recusandae.
                             </p>
-                            <img class="corazon" src="../imagenes/corazon.png" alt="corazon" srcset="">
+                            <img class="corazon" src="../imagenes/corazon.png" alt="corazon">
                         </div>
                     </main>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="img_nosotros">
+                        <img class="img_nosotros_box1" src="../imagenes/Productos/Cupcakes.jpg" alt="Cupcakes">
+                        <img class="img_nosotros_box2" src="../imagenes/Productos/Bombones.jpg" alt="Bombones">
+                        <img class="img_nosotros_box3" src="../imagenes/Productos/Maicena.jpg" alt="Maicena">
+                        <img class="img_nosotros_box4" src="../imagenes/Productos/Pepas.jpg" alt="Pepas">
+                    </div>
                 </div>
             </div>
             <div class="row">
