SEO agregado al sitio

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="tortas, torta, tartas, cupcakes, icepops, galletitas, quilmes, berazategui, cumpleaños, casamiento, eventos">
-    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <meta name="description" content="Pasteleria y Reposteria Artesanal">
     <title>Pies & Cakes | Inicio</title>
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
