--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
+    <meta name="keywords" content="tortas, torta, tartas, cupcakes, icepops, galletitas, quilmes, berazategui, cumpleaños, casamiento, eventos">
+    <meta name="description" content="Pasteleria y Reposteria Artesanal">
     <title>Pies & Cakes | Contacto</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,8 +59,7 @@
             <main>
                 <div class="col-12">
                     <div class="pespeciales">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dicta, exercitationem maxime
-                            temporibus debitis adipisci facilis eos.</p>
+                        <p>Queremos ser parte de tu evento, contactanos para coordinar una reunión:</p>
                     </div>
                 </div>
                 <div class="bodycontacto">
