--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Icons/favicon.ico" type="image/x-icon">
+    <meta name="keywords" content="tortas, torta, tartas, cupcakes, icepops, galletitas, quilmes, berazategui, cumpleaños, casamiento, eventos">
+    <meta name="description" content="Pasteleria y Reposteria Artesanal">
     <title>Pies & Cakes | Nosotros</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,6 +56,7 @@
             </div>
             <div class="row">
                 <div class="col-12">
+                    <p class="productosp">¿Quienes somos?</p>
                     <main class="mainnosotros">
                         <img class="sandrayaylen" src="../imagenes/Nosotros.jpeg" alt="Sandra y Aylen">
                         <div class="textycorazon">
