--- a/paginas/hacetupedido.html
+++ b/paginas/hacetupedido.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../Icons/favicon.ico" type="image/x-icon">
+    <meta name="keywords" content="tortas, torta, tartas, cupcakes, icepops, galletitas, quilmes, berazategui, cumpleaños, casamiento, eventos">
+    <meta name="description" content="Pasteleria y Reposteria Artesanal">
     <title>Pies & Cakes | Hace tu Pedido</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
