--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -22,7 +22,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="../styles/stylesrem.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 
 <body>
