sass agregado a todo el sitio. Falta agregar menu hamburguesa de bootstrap

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -22,7 +22,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/styles-from-sass.css" />
 </head>
 
 <body>
@@ -58,7 +58,7 @@
         <div class="row">
             <main>
                 <div class="col-12">
-                    <div class="pespeciales">
+                    <div class="productosp">
                         <p>Queremos ser parte de tu evento, contactanos para coordinar una reunión:</p>
                     </div>
                 </div>
