--- a/paginas/hacetupedido.html
+++ b/paginas/hacetupedido.html
@@ -22,7 +22,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <link rel="stylesheet" href="../styles/styles-from-sass.css" />
 </head>
 
 <body>
@@ -58,11 +58,8 @@
         <div class="row">
             <div class="col-12">
                 <main>
-                    <div class="pespeciales">
-                        <!-- <p class="pespeciales-texto">Si estas necesitando algun pedido especial para tu evento, contactanos por  </p> -->
-                        <a href="contacto.html">Si estas necesitando algun pedido especial para tu evento, contactanos
-                            por
-                            acá</a>
+                    <div class="productosp">
+                        <a href="contacto.html">Si estas necesitando algun pedido especial para tu evento, contactanos por acá</a>
                     </div>
                     <div class="gridcontainerhtp">
                         <div class="card mb-3 cardshtp" style="max-width: 540px;">
