--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +23,6 @@
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="styles/styles-from-sass.css" />
 </head>
-
 <body>
     <div class="container-fluid">
         <div class="row">
@@ -65,8 +63,7 @@
                         <img src="imagenes/Torta4.jpeg">
                     </div>
                     <div class="parrafo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam a ex non eveniet
-                            officia,
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam a ex non eveniet officia,
                             laudantium, fugiat perspiciatis qui sint repellat vitae sed impedit repudiandae ipsum esse
                             animi blanditiis ratione doloremque!</p>
                     </div>
@@ -100,13 +97,4 @@
         <!-- BOOTSTRAP -->
     </div>
 </body>
-
 </html>
-
-<!-- ESTRUCTURA BASICA DE BOOTSTRAP
-    .container / container-fluid
-        .row
-            .col-sm-12 .col-md-6 .col-lg-4
-            .col
-
--->
