--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -70,7 +70,7 @@
                     </main>
                 </div>
             </div>
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-12">
                     <div class="img_nosotros">
                         <img class="img_nosotros_box1" src="../imagenes/Productos/Cupcakes.jpg" alt="Cupcakes">
@@ -79,7 +79,7 @@
                         <img class="img_nosotros_box4" src="../imagenes/Productos/Pepas.jpg" alt="Pepas">
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-12">
                     <footer>
