Arreglos en footer, form contacto, margin navbar, size map y otros

--- a/paginas/hacetupedido.html
+++ b/paginas/hacetupedido.html
@@ -57,7 +57,7 @@
             <div class="col-12">
                 <main>
                     <div class="productosp">
-                        <a href="contacto.html">Si estas necesitando algun pedido especial para tu evento, contactanos por acá</a>
+                        <a href="contacto.html">Si estas necesitando algun pedido especial para tu evento, contactanos por acá:</a>
                     </div>
                     <div class="gridcontainerhtp">
                         <div class="card mb-3 cardshtp" style="max-width: 540px;">
