--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <!-- BOOTSTRAP -->
-    <link rel="stylesheet" href="styles/styles-from-sass.css" />
+    <link rel="stylesheet" href="./css/styles-main.css" />
 </head>
 <body>
     <div class="container-fluid">
